docs/0.13/_sources/api/gammapy.spectrum.SpectrumDataset.rst.txt
SpectrumDataset
===============

.. currentmodule:: gammapy.spectrum

.. autoclass:: SpectrumDataset
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~SpectrumDataset.data_shape
      ~SpectrumDataset.energy_range
      ~SpectrumDataset.excess
      ~SpectrumDataset.likelihood_type
      ~SpectrumDataset.mask
      ~SpectrumDataset.model
      ~SpectrumDataset.parameters

   .. rubric:: Methods Summary

   .. autosummary::

      ~SpectrumDataset.copy
      ~SpectrumDataset.fake
      ~SpectrumDataset.likelihood
      ~SpectrumDataset.likelihood_per_bin
      ~SpectrumDataset.npred
      ~SpectrumDataset.plot_counts
      ~SpectrumDataset.plot_fit
      ~SpectrumDataset.plot_residuals
      ~SpectrumDataset.residuals

   .. rubric:: Attributes Documentation

   .. autoattribute:: data_shape
   .. autoattribute:: energy_range
   .. autoattribute:: excess
   .. autoattribute:: likelihood_type
   .. autoattribute:: mask
   .. autoattribute:: model
   .. autoattribute:: parameters

   .. rubric:: Methods Documentation

   .. automethod:: copy
   .. automethod:: fake
   .. automethod:: likelihood
   .. automethod:: likelihood_per_bin
   .. automethod:: npred
   .. automethod:: plot_counts
   .. automethod:: plot_fit
   .. automethod:: plot_residuals
   .. automethod:: residuals
